pDLNA CHANGELOG
(c) 2010-2013 Stefan Heumader
email: stefan@heumader.at
webpage: http://www.pdlna.com

Licened under GPLv3 (see LICENSE file)

-----------------------------------------

Version 0.61.0
xx-xx-2013

- fixed issue #7 (https://github.com/geuma/pDLNA/issues/7) -aka- Uninitialized value in SSDP.pm

Version 0.60.1
14-02-2013
- fixed issue #8 (https://github.com/geuma/pDLNA/issues/8) -aka- database preparation problem

Version 0.60.0
13-02-2013

- using a database instead of the whole huge in memory object for the ContentLibrary
- fixed issue #6 (https://github.com/geuma/pDLNA/issues/6) -aka- the default size for the logfile rotation
- updated copyright year
- added even more information to the WebUI
- external media items are shown in WebUI too
- transcoding is now avaiable to be configured per client seperately
- added the configuration option TempDir in configuration file to configure the directory for temporary files

Version 0.53.0
15-08-2012

- added LowResourceMode configuration parameter for small devices like NAS and so on, audio and video files will not be openend and analyzed via Mplayer
- added some general functions to Content object for calculation total indexed amount of files, their size and the total indexing time
- changed the webgui's URL to http://IP:HTTPPort/webui/ and renamed the perl module itself too
- changed check for Mplayer - it is necessary when LowResourceMode is disabled and/or VideoThumbnails is enabled
- changed check for FFmpeg - it is necessary when TranscodingProfiles are configured

Version 0.52.0
05-08-2012

- fixed a small typo in INSTALL file, thanks to CrisAnderson
- rewrote a lot of PDLNA::DeviceList database stuff for storing more informations about the devices to maintain better compatibility and features in the future (added PDLNA::DeviceUDN, PDLNA::DeviceService and PDLNA::DeviceServiceAction Perl modules)
- added manufacturerURL for DeviceDescription XML

Version 0.51.2
21-07-2012
