@@ -11,6 +11,7 @@ Version 0.61.0
 xx-xx-2013
 
 - fixed issue #7 (https://github.com/geuma/pDLNA/issues/7) -aka- Uninitialized value in SSDP.pm
+- reworked/improved the code for parsing received SSDP messages
 
 Version 0.60.1
 14-02-2013
